Modified layout settings for mobile devices.

--- a/css/location.css
+++ b/css/location.css
@@ -8,6 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin: 0 5%;
 }
 
 .container {
@@ -22,7 +23,7 @@ body {
 .item {
   background: hotpink;
   width: 100px;
-  height: 100px;
+  height: 165px;
 }
 
 /* ---- */
@@ -33,7 +34,7 @@ body {
   grid-template-areas:
     "card-1 card-2"
     "card-1 card-3";
-  height: 30vh;
+  height: 330px;
   margin: 0 25px;
 }
 
@@ -58,10 +59,10 @@ body {
   grid-template-areas:
     "card1 card2"
     "card1 card3";
-  width: 350px;
-  height: 350px;
+  width: 600px;
+  height: 480px;
   float: left;
-  margin: 25px;
+  margin: 25px 100px 20px 210px;
 }
 
 .item-one {
@@ -95,14 +96,131 @@ body {
   grid-template-areas:
     "card1 card2"
     "card3 card3";
-  width: 350px;
-  height: 350px;
-  margin: 25px;
+  width: 600px;
+  height: 480px;
+  margin: 25px 100px 20px 210px;
 }
 
 @media (max-width: 575.98px) {
+  .container {
+    margin: 0 10px 20px 10px;
+  }
+
+  .container_new {
+    height: 180px;
+    margin: 0 10px 20px 10px;
+  }
+
   .container_two,
   .container_three {
-    margin: 5px;
+    width: 85%;
+    height: 300px;
+    margin: 0 25px 20px 25px;
+  }
+
+  .container_main {
+    margin: 0;
+  }
+
+  .item {
+    height: 90px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .container {
+    margin: 0 10px 20px 10px;
+  }
+
+  .container_new {
+    height: 180px;
+    margin: 0 10px 20px 10px;
+  }
+  .container_main {
+    margin: 0;
+  }
+
+  .item {
+    height: 90px;
+  }
+
+  .container_two,
+  .container_three {
+    width: 45%;
+    height: 300px;
+    margin: 0 22px 20px 22px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .container {
+    margin: 0 10px 20px 10px;
+  }
+
+  .container_main {
+    margin: 0;
+  }
+
+  .container_new {
+    margin: 0 10px 20px 10px;
+    height: 305px;
+  }
+
+  .item {
+    height: 152px;
+  }
+
+  .container_two,
+  .container_three {
+    width: 45%;
+    height: 360px;
+    margin: 0 22px 20px 22px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .container_main {
+    margin: 0 1%;
+  }
+
+  .container_new {
+    height: 280px;
+  }
+
+  .item {
+    height: 140px;
+  }
+
+  .container_two,
+  .container_three {
+    width: 45%;
+    height: 350px;
+    margin: 25px 35px;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1899.98px) {
+  .container_main {
+    margin: 0 5%;
+  }
+
+  .container {
+    margin: 0 10px 20px 10px;
+  }
+
+  .container_new {
+    height: 305px;
+    margin: 0 10px 20px 10px;
+  }
+
+  .item {
+    height: 152px;
+  }
+
+  .container_two,
+  .container_three {
+    width: 48%;
+    height: 350px;
+    margin: 0 20px 20px 20px;
   }
 }
