--- a/css/style_margin.css
+++ b/css/style_margin.css
@@ -143,7 +143,7 @@
   .container_menu {
     grid-template-columns: 1fr;
     justify-items: center;
-    margin: 0;
+    margin: 0 0 30px 0;
   }
 
   .button_submit {
