feat: center the content in the middle of the page

--- a/css/style_position.css
+++ b/css/style_position.css
@@ -1,16 +1,18 @@
+.wrapper-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  gap: 4rem;
+}
+
 /* Grid position start */
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 5px;
+  gap: 5px;
   font-family: "Lato", sans-serif;
   float: left;
-  padding-top: 75px;
-  margin: 0 55px;
-}
-
-.wrapper-content {
-  margin: 0 18%;
 }
 
 .container-position {
@@ -56,11 +58,9 @@
 .wrapper-end {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 5px;
+  gap: 5px;
   font-family: "Lato", sans-serif;
   float: left;
-  padding-top: 75px;
-  margin: 0 55px;
 }
 
 .container-position-end {
@@ -148,186 +148,4 @@
   left: 100%;
   top: 100%;
   transform: translate(-100%, -100%);
-}
-
-@media (max-width: 575.98px) {
-  .wrapper {
-    justify-content: center;
-    justify-items: center;
-    font-size: 14px;
-    float: none;
-  }
-
-  .wrapper-end {
-    justify-content: center;
-    justify-items: center;
-    font-size: 14px;
-    float: none;
-    padding-top: 45px;
-  }
-
-  .wrapper-content {
-    margin: 0 12%;
-  }
-
-  .container-position,
-  .container-position-end {
-    width: 100px;
-    height: 100px;
-  }
-
-  .container-position {
-    position: initial;
-  }
-
-  .element {
-    width: 50px;
-    height: 50px;
-  }
-
-  .element-position {
-    width: 50px;
-    height: 50px;
-  }
-
-  .element-position-1,
-  .element-position-2,
-  .element-position-3,
-  .element-position-4,
-  .element-position-5,
-  .element-position-6,
-  .element-position-7,
-  .element-position-8,
-  .element-position-9 {
-    position: initial;
-  }
-}
-
-@media (min-width: 576px) and (max-width: 767.98px) {
-  .wrapper-content {
-    margin: 0 11%;
-  }
-
-  .container-position {
-    position: initial;
-    width: 140px;
-    height: 140px;
-  }
-
-  .container-position-end {
-    width: 140px;
-    height: 140px;
-  }
-  .element-position {
-    width: 50px;
-    height: 50px;
-  }
-
-  .element-position-1,
-  .element-position-2,
-  .element-position-3,
-  .element-position-4,
-  .element-position-5,
-  .element-position-6,
-  .element-position-7,
-  .element-position-8,
-  .element-position-9 {
-    position: initial;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .wrapper-content {
-    margin: 0 12%;
-  }
-
-  .container-position {
-    position: initial;
-  }
-
-  .element-position-1,
-  .element-position-2,
-  .element-position-3,
-  .element-position-4,
-  .element-position-5,
-  .element-position-6,
-  .element-position-7,
-  .element-position-8,
-  .element-position-9 {
-    position: initial;
-  }
-}
-
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .container-position,
-  .container-position-end {
-    width: 140px;
-    height: 140px;
-  }
-
-  .wrapper-content {
-    margin: 0 6%;
-  }
-
-  .container-position {
-    position: initial;
-  }
-
-  .element-position-1,
-  .element-position-2,
-  .element-position-3,
-  .element-position-4,
-  .element-position-5,
-  .element-position-6,
-  .element-position-7,
-  .element-position-8,
-  .element-position-9 {
-    position: initial;
-  }
-
-  .wrapper {
-    margin: 0;
-  }
-  .wrapper-end {
-    margin: 0 2%;
-  }
-}
-
-@media (min-width: 1200px) and (max-width: 1899.98px) {
-  .wrapper {
-    margin: 0;
-  }
-
-  .container-position,
-  .container-position-end {
-    width: 140px;
-    height: 140px;
-  }
-
-  .wrapper-content {
-    margin: 0 14%;
-  }
-
-  .element,
-  .element-position {
-    font-size: 14px;
-    width: 50px;
-    height: 50px;
-  }
-
-  .container-position {
-    position: initial;
-  }
-
-  .element-position-1,
-  .element-position-2,
-  .element-position-3,
-  .element-position-4,
-  .element-position-5,
-  .element-position-6,
-  .element-position-7,
-  .element-position-8,
-  .element-position-9 {
-    position: initial;
-  }
 }
