--- a/css/style_tableCell.css
+++ b/css/style_tableCell.css
@@ -1,10 +1,13 @@
 .container_main {
-  padding-top: 75px;
+  display: flex;
   justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin: 0 100px;
+  height: 100vh;
 }
+
+.content {
+  padding: 6rem 2rem 0 2rem;
+}
+
 /* table cell start */
 .element {
   width: 60px;
@@ -126,57 +129,4 @@
   display: table-cell;
   text-align: right;
   vertical-align: bottom;
-}
-
-@media (max-width: 575.98px) {
-  .container_main {
-    margin: 0 10px;
-  }
-
-  .container,
-  .container-end {
-    height: 120px;
-  }
-
-  .element {
-    padding-top: 15px;
-    font-size: 0;
-    width: 25px;
-    height: 25px;
-  }
-}
-
-@media (min-width: 576px) and (max-width: 767.98px) {
-  .container_main {
-    margin: 0 10px;
-  }
-
-  .element {
-    font-size: 14px;
-    width: 50px;
-    height: 50px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .container_main {
-    margin: 0 10px;
-  }
-
-  .element {
-    font-size: 14px;
-    width: 50px;
-    height: 50px;
-  }
-}
-
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .container_main {
-    margin: 0 40px;
-  }
-  .element {
-    font-size: 14px;
-    width: 50px;
-    height: 50px;
-  }
 }
