--- a/css/place-self.css
+++ b/css/place-self.css
@@ -1,18 +1,17 @@
 .container {
   display: flex;
-  padding-top: 75px;
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 4rem 0;
 }
 
 .items {
-  background: papayawhip;
   display: grid;
+  background: papayawhip;
   grid-template-columns: repeat(2, 1fr);
-  width: 300px;
-  height: 300px;
-  margin: 0 100px;
+  width: 400px;
+  height: 400px;
 }
 
 .item:nth-child(1) {
@@ -27,7 +26,7 @@
 
 @media (max-width: 575.98px) {
   .items {
-    width: 400px;
-    margin: 0 10px;
+    width: 300px;
+    height: 300px;
   }
 }
