--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -2,10 +2,9 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
-  padding: 25px 50px;
+  padding: 50px;
   justify-content: center;
   align-content: center;
-  height: 90vh;
 }
 
 .button_submit {
@@ -23,4 +22,23 @@
   background-color: #ff7171;
   transition: color 0.2s 0.05s ease;
   cursor: pointer;
+}
+
+@media (max-width: 575.98px) {
+  .container_menu {
+    grid-template-columns: 1fr;
+    padding: 50px 35px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .container_menu {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .container_menu {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
