--- a/css/content_item.css
+++ b/css/content_item.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 75px;
+  padding: 4rem;
   text-align: center;
 }
 
@@ -27,6 +27,6 @@
 
 @media (max-width: 575.98px) {
   .container {
-    padding: 75px 15px 0 15px;
+    padding: 3rem;
   }
 }
