--- a/css/flexbox_mq.css
+++ b/css/flexbox_mq.css
@@ -1,7 +1,7 @@
 @media (max-width: 575.98px) {
   .wrapper-content {
     flex-direction: column;
-    padding-top: 2rem;
+    padding: 3rem 0;
     height: inherit;
   }
 
