--- a/css/justify-content.css
+++ b/css/justify-content.css
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
   gap: 10px;
-  padding-top: 75px;
+  padding-top: 4rem;
   justify-items: center;
 }
 
@@ -91,7 +91,7 @@
   .grid {
     grid-template-columns: 1fr;
     margin: 0 15px;
-    padding-bottom: 1em;
+    padding: 3rem 0;
   }
 
   .grid-container,
