--- a/css/auto-fill-fit.css
+++ b/css/auto-fill-fit.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 3rem 2rem;
+  padding: 3rem 10rem;
 }
 
 .grid-container {
@@ -20,4 +20,22 @@
   padding: 20px;
   color: #fff;
   border: 1px solid #fff;
+}
+
+@media (max-width: 575.98px) {
+  .container {
+    padding: 3rem 2rem;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .container {
+    padding: 3rem 2rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .container {
+    padding: 3rem 4rem;
+  }
 }
