--- a/css/display.css
+++ b/css/display.css
@@ -1,5 +1,5 @@
 .container {
-  padding-top: 75px;
+  padding: 3rem 0;
   text-align: center;
 }
 
@@ -9,8 +9,8 @@
   color: white;
   text-align: center;
   border-radius: 10px;
-  padding: 10px;
-  margin: 10px;
+  padding: 12px;
+  margin: 0 6rem;
 }
 
 .grid {
@@ -19,8 +19,8 @@
   color: white;
   text-align: center;
   border-radius: 10px;
-  padding: 10px;
-  margin: 10px;
+  padding: 12px;
+  margin: 1rem 6rem;
 }
 
 .flex {
@@ -29,10 +29,10 @@
   color: white;
   justify-content: center;
   border-radius: 10px;
-  padding: 10px;
-  margin: 10px;
+  padding: 12px;
+  margin: 0 6rem;
 }
-/* ------- */
+
 .block_one {
   display: inline;
   background: #5aa897;
@@ -58,4 +58,12 @@
   margin: 15px;
   border-radius: 10px;
   padding: 10px;
+}
+
+@media (max-width: 575.98px) {
+  .block,
+  .grid,
+  .flex {
+    margin: 1rem 2rem;
+  }
 }
