--- a/css/justify-self.css
+++ b/css/justify-self.css
@@ -1,10 +1,9 @@
 .container {
   display: flex;
-  padding-top: 50px;
+  padding: 3rem 1rem;
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 0 10px;
 }
 
 .items {
@@ -23,4 +22,11 @@
 
 .item:not(:nth-child(1)) {
   background: turquoise;
+}
+
+@media (max-width: 575.98px) {
+  .items {
+    width: 300px;
+    height: 300px;
+  }
 }
