feat: adjust the padding of the items

--- a/css/align-content.css
+++ b/css/align-content.css
@@ -2,93 +2,93 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
-  gap: 10px;
-  padding-top: 75px;
   justify-items: center;
+  padding: 3rem 10rem;
+  gap: 2rem;
 }
 
 .grid-container {
-  border: 4px dotted turquoise;
   display: grid;
   place-content: center;
+  border: 4px dotted turquoise;
   width: 200px;
   height: 200px;
 }
 
 .container {
-  background: papayawhip;
   display: grid;
   grid-template-columns: repeat(3, 60px);
   grid-template-rows: auto;
+  align-content: flex-start;
+  background: papayawhip;
   width: 180px;
   height: 180px;
-  align-content: flex-start;
   gap: 10px;
 }
 
 .container_two {
-  background: papayawhip;
   display: grid;
   grid-template-columns: repeat(3, 60px);
   grid-template-rows: auto;
+  align-content: center;
+  background: papayawhip;
   width: 180px;
   height: 180px;
-  align-content: center;
   gap: 10px;
 }
 
 .container_three {
-  background: papayawhip;
   display: grid;
   grid-template-columns: repeat(3, 60px);
   grid-template-rows: auto;
+  align-content: flex-end;
+  background: papayawhip;
   width: 180px;
   height: 180px;
-  align-content: flex-end;
   gap: 10px;
 }
 
 .container_four {
-  background: papayawhip;
   display: grid;
   grid-template-columns: repeat(3, 60px);
   grid-template-rows: auto;
+  align-content: space-around;
+  background: papayawhip;
   width: 180px;
   height: 180px;
-  align-content: space-around;
   gap: 10px;
 }
 
 .container_five {
-  background: papayawhip;
   display: grid;
   grid-template-columns: repeat(3, 60px);
   grid-template-rows: auto;
+  align-content: space-between;
+  background: papayawhip;
   width: 180px;
   height: 180px;
-  align-content: space-between;
   gap: 10px;
 }
 
 .container_six {
-  background: papayawhip;
   display: grid;
   grid-template-columns: repeat(3, 60px);
   grid-template-rows: auto;
+  align-content: space-evenly;
+  background: papayawhip;
   width: 180px;
   height: 180px;
-  align-content: space-evenly;
   gap: 10px;
 }
 
 .container_seven {
-  background: papayawhip;
   display: grid;
   grid-template-columns: repeat(3, 60px);
   grid-template-rows: auto;
+  align-content: stretch;
+  background: papayawhip;
   width: 180px;
   height: 180px;
-  align-content: stretch;
   gap: 10px;
 }
 
@@ -102,7 +102,6 @@
 @media (max-width: 575.98px) {
   .grid {
     grid-template-columns: 1fr;
-    margin: 0 15px;
     padding: 3rem 0;
   }
 
@@ -127,5 +126,17 @@
   .item {
     height: 50px;
     width: 50px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .grid {
+    padding: 3rem 1rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .grid {
+    padding: 3rem 2rem;
   }
 }
