--- a/css/mode_challenge.css
+++ b/css/mode_challenge.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 75px 25px;
+  padding: 3rem;
+  gap: 2rem;
 }
 
 .card {
@@ -13,7 +14,6 @@
   border-radius: 10px;
   overflow: hidden;
   float: left;
-  margin-right: 20px;
 }
 
 .card_alignments {
@@ -25,7 +25,6 @@
   direction: rtl;
   writing-mode: vertical-rl;
   float: left;
-  margin-right: 20px;
 }
 
 .card_alignments_three {
@@ -37,7 +36,6 @@
   direction: rtl;
   writing-mode: sideways-lr;
   float: left;
-  margin-right: 20px;
 }
 
 .card_alignments_four {
