--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Creepster&family=Dangrek&family=Flavors&family=Rubik+Moonrocks&family=Sunshiney&display=swap");
+
 .container_menu {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -8,13 +10,19 @@
 }
 
 .button_submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Dangrek", cursive;
   background: #f14668;
+  border-radius: 8px;
   width: 100%;
   height: 80px;
-  border-radius: 8px;
   border: none;
   color: white;
-  font-size: 16px;
+  font-size: 18px;
+  text-decoration: none;
+  transition: 1s all ease;
   -webkit-appearance: none;
   box-shadow: 9px 13px 3px 0px #f8b400;
   -webkit-box-shadow: 9px 13px 3px 0px #f8b400;
@@ -40,6 +48,12 @@
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
+  .container_menu {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
   .container_menu {
     grid-template-columns: repeat(3, 1fr);
   }
